feat(game): enhance state logic with sound broadcasts, quick-start, and timer controls
- Added `broadcastWithSound` to `AbstractState` for message broadcasting with sound effects.
- Improved `LobbyState` countdown with sound cues at specific intervals.
- Introduced `quickStart` method in `LobbyState` for admins to trigger a quick start via commands.
- Updated `onTimerEnd` in `ActiveState` to support state progression with `nextState`.
- Fixed `canStart` logic in `GameStateSeries` to use correct player count comparison.
- Refactored state handling to include `hasEnded` flag for better state lifecycle tracking.
- Updated admin commands to include `quick-start`, adjust descriptions, and improve feedback messages.